# doggy

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs
.devcontainer/: devcontainer.json
.github/workflows/: pre-release.yml  release.yml  rust.yml
doc/: Dockerfile  docker-compose.yaml  preview.tape
doc/scripts/: clean.sh  docker-compose.yaml  init.sh
src/: action.rs  app.rs  components.rs  main.rs  runtime.rs  tui.rs  utils.rs
src/components/: compose_view.rs  composes.rs  container_exec.rs  container_inspect.rs  container_logs.rs  container_view.rs  containers.rs  image_inspect.rs  images.rs  network_inspect.rs  networks.rs  volume_inspect.rs  volumes.rs
src/runtime/: cri.rs  docker.rs  model.rs
tracing/: docker-compose.yaml
