[package]
name = "doggy"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
chrono = { version = "0.4.31" }
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6.2"
config = "0.13.3"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
eyre = { version = "0.6" }
futures = "0.3.28"
human-panic = "1.2.0"
humansize = { version = "2.0.0", features = ["impl_style"] }
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.148"
env_logger = "0.10.1"
log = "0.4.20"
log4rs = "1.2.0"
pretty_assertions = "1.4.0"

ratatui = { version = "0.25.0", features = ["serde", "macros", "unstable-rendered-line-info"] }
ansi-to-tui = { version = "3.1.0" }

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
tokio = { package = "tokio", version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"

tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }

k8s-cri = { version = "0.7", optional = true }
tonic = { version = "0.9", optional = true }
tower = { version = "0.4", optional = true }

bollard = { version = "0.15", features = ["ssl"], optional = true }

# Implements the types defined in the Otel spec
opentelemetry = { version = "0.17.0", optional = true }
# Integration between the tracing crate and the opentelemetry crate
tracing-opentelemetry = { version = "0.17.2", optional = true }
# Allows you to export data to Jaeger
opentelemetry-jaeger = { version = "0.16.0", optional = true }

[features]
default = ["docker"]
docker = ["dep:bollard"]
cri = ["dep:k8s-cri", "dep:tonic", "dep:tower"]
otel = ["tokio/tracing", "dep:opentelemetry", "dep:tracing-opentelemetry", "dep:opentelemetry-jaeger"]

